--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,13 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+  font-family: "Roboto", sans-serif !important;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 * {
