Added span, divider tags

--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -1,5 +1,5 @@
-$BLACK: #221f1f; // For background
-$DARK: #161616; // For text
+$BLACK: #221f1f; // For text
+$DARK: #161616; // For background
 $RED: #e40916;
 $H_RED: #B60711;
 $GRAY: #cecfd1;
