--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -1,11 +1,11 @@
 @import "../styles/utils.module.scss";
 
 ._navigation_wrapper_{
-    position: fixed;
+    // position: fixed;
     width: 100vw;
     padding: 1rem 2rem;
-    // background-color: $BLACK;
-    background-color: transparent;
+    background-color: $DARK;
+    // background-color: transparent;
 
 
     @media only screen and (min-width: 2501px) {
