Added media queries to hero component upto 2560px

--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -4,6 +4,35 @@
     margin-right: 0.512rem;
     font-size: 1.5rem;
 
+
+
+
+    /* ##################################################################### */
+        @media only screen and (min-width: 2501px) {
+            font-size: 3rem;
+        }
+    
+        @media only screen and (min-width: 2201px) and (max-width: 2500px) {
+            font-size: 2.75rem;
+        }
+    
+        @media only screen and (min-width: 1801px) and (max-width: 2200px) {
+            font-size: 2.25rem;
+        }
+    
+        @media only screen and (min-width: 1400px) and (max-width: 1800px) {
+            font-size: 1.75rem;
+        }
+    
+        /* ##################################################################### */
+
+
+
+
+
+
+
+
     @media only screen and (max-width: 375px){
         margin-right: 0.328rem;
         font-size: 1.25rem;
