--- a/styles/Movie.module.scss
+++ b/styles/Movie.module.scss
@@ -5,6 +5,25 @@
     cursor: pointer;
     font-size: 1.25rem;
 
+
+    @media only screen and (min-width: 2501px) {
+        font-size: 2.25rem;
+    }
+    
+        @media only screen and (min-width: 2201px) and (max-width: 2500px) {
+            font-size: 2.1rem;
+        }
+    
+        @media only screen and (min-width: 1801px) and (max-width: 2200px) {
+                font-size: 1.8rem;
+        }
+    
+        @media only screen and (min-width: 1400px) and (max-width: 1800px) {
+            font-size: 1.5rem;
+        }
+    
+        /* ############################################################# */
+
  
 }
 
@@ -48,7 +67,7 @@
     display: none;
             cursor: pointer;
     position: absolute;
-    top: 23%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 50%;
@@ -60,9 +79,64 @@
             background: $H_RED;
         }
 
+
+
+@media only screen and (min-width: 2501px) {
+        top: 26%;
+}
+
+@media only screen and (min-width: 2201px) and (max-width: 2500px) {
+    top: 27%;
+}
+
+// ##############################################################################
+
+@media only screen and (max-width: 1199px) {
+    top: 22%;
+}
+
+@media only screen and (max-width: 991px) {
+    top: 32%;
+}
+
+
+@media only screen and (max-width: 700px){
+        top: 28%;
+}
+
+@media only screen and (max-width: 575px) {
+    top: 35%;
+}
+
+
+@media only screen and (max-width: 375px) {
+    top: 28%;
+}
+
     .movie_play_button_{
         color: white;
         font-size: 2rem;
+
+
+
+        @media only screen and (min-width: 2501px) {
+                font-size: 4.5rem;
+        }
+        
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) {
+                font-size: 4rem;
+            }
+        
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) {
+                font-size: 3.5rem;
+            }
+        
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) {
+                font-size: 3rem;
+            }
+        
+        
+            // ##############################################################################
        
     }
 }
