Added react-toastify package

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,3 +20,84 @@ body {
     background: black;
   }
 }
+
+
+.Toastify__toast-container {
+
+
+
+    .Toastify__toast-icon {
+        @media only screen and (min-width: 2501px) {
+          font-size: 2rem;
+        }
+    
+        @media only screen and (min-width: 2201px) and (max-width: 2500px) {
+          font-size: 1.75rem;
+        }
+    
+        @media only screen and (min-width: 1801px) and (max-width: 2200px) {
+          font-size: 1.5rem;
+        }
+    
+        @media only screen and (min-width: 1400px) and (max-width: 1800px) {
+          font-size: 5rem !important;
+        }
+    
+        /* ############################################################# */
+      }
+
+
+
+
+
+  @media only screen and (min-width: 2501px) {
+        width: 500px !important;
+    }
+  
+    @media only screen and (min-width: 2201px) and (max-width: 2500px) {
+      width: 450px !important;
+    }
+  
+    @media only screen and (min-width: 1801px) and (max-width: 2200px) {
+        width: 400px !important;
+    }
+  
+    @media only screen and (min-width: 1400px) and (max-width: 1800px) {
+      width: 350px !important;
+    }
+
+
+  .Toastify__toast {
+@media only screen and (min-width: 2501px) {
+    font-size: 2rem;
+  }
+
+  @media only screen and (min-width: 2201px) and (max-width: 2500px) {
+    font-size: 1.75rem;
+  }
+
+  @media only screen and (min-width: 1801px) and (max-width: 2200px) {
+    font-size: 1.5rem;
+  }
+
+  @media only screen and (min-width: 1400px) and (max-width: 1800px) {
+    font-size: 1.25rem;
+  }
+
+  /* ############################################################# */
+
+  @media only screen and (max-width: 1199px) {
+    font-size: 0.9rem;
+  }
+
+  }
+
+  
+
+
+}
+
+
+ 
+
+
