--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,27 +24,29 @@ body {
 
 .Toastify__toast-container {
 
-
-
+  .Toastify__toast-body {
     .Toastify__toast-icon {
         @media only screen and (min-width: 2501px) {
-          font-size: 2rem;
+              width: 55px;
         }
     
         @media only screen and (min-width: 2201px) and (max-width: 2500px) {
-          font-size: 1.75rem;
+              width: 50px;
         }
     
         @media only screen and (min-width: 1801px) and (max-width: 2200px) {
-          font-size: 1.5rem;
+              width: 40px;
         }
     
         @media only screen and (min-width: 1400px) and (max-width: 1800px) {
-          font-size: 5rem !important;
+          width: 30px;
         }
     
         /* ############################################################# */
       }
+}
+
+    
 
 
 
